syntax = "proto3";

package address;

import "common.proto";

message Address {
  enum Sex {
    MALE = 0;
    FEMALE = 1;
  }

  enum Tag {
    NULL = 0;
    HOME = 1;
    SCHOOL = 2;
    COMPANY = 3;
  }

  string address_id = 1;
  string name = 2;
  Sex sex = 3;
  string address = 4;
  string address_detail = 5;
  string phone = 6;
  Tag tag = 7;
}

// 获取当前用户的地址信息

message FetchAddressReq {
  string user_id = 1;
}

message FetchAddressResp {
  repeated Address addresses = 2; 
}

// 更新当前用户的地址信息

message UpdateAddressReq {
  string user_id = 1;
  Address address = 2;
}

message UpdateAddressResp {
  ResultType result_type = 1;
}
